2012-09-26  Corey Minyard <minyard@acm.org>

	* configure.in: Move to 2.8-rc3

	* dataxfer.c, dataxfer.h, selector.c, selector.h, ser2net.c: Add
	clean shutdown handling so locks are properly removed when the
	program is killed with SIGINT.

2012-09-10  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a bug reported by Jan-Benedict Glaw, where
	port->dinfo.openstr may be NULL, but srdup is called on it
	without checking.  Add a check.

2012-07-23  qchats lee <qchats@gmail.com>

	* dataxfer.c: My change for this did not match Qchats' change,
	so fix that.

	* utils.c: Fix the write_full() function to handle the return
	result properly; the parenthesis in the if statement ended
	in the wrong place.

2012-07-22  qchats lee <qchats@gmail.com>

	* dataxfer.c: Add a missing ")" after the "OPEN(..." when
	header tracing.

2012-04-18  Corey Minyard <minyard@acm.org>

	* buffer.c, buffer.h, Makefile.am: Added a new type and set of
	operations for buffer handling.  This simplifies and allows
	abstraction of other parts of the code.

	* dataxfer.c, telnet.c, telnet.h, controller.c: Switch
	out_telnet_cmd and associated parts to be the new buffer type.

	* dataxfer.c: Switch the banner over to the new buffer type.

	* dataxfer.c: Consolidate banner and filename string handling.
	Note that there was an issue with \s, as it was something
	different in banners and filenames.  Added new options, \S (for
	seconds) and \B (for serial port parameters) to resolve this
	issue, and \s is backwards compatible but deprecated.

	* ser2net.8, ser2net.conf: Since the consolidated banner/filename
	processing allows all the \<x> options to be available for both
	banners and filenames, rework the documentation.

	* dataxfer.c: Convert the main I/O buffers for data transfer to
	the new buffer type.

	* devcfg.h, devcfg.c, readconfig.c, utils.h: Added a
	new OPENSTR and CLOSESTR option for the configuration file.  These
	are strings that will be transmitted to the device when a port is